--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,46 @@ services:
     environment:
       - POSTGRES_DB=tasks
       - POSTGRES_PASSWORD=password
+
+  sonarqube:
+    image: sonarqube:7.9.2-community
+    container_name: sonar
+    ports:
+      - "9000:9000"
+    environment:
+      - SONARQUBE_JDBC_USERNAME=sonarqube
+      - SONARQUBE_JDBC_PASSWORD=sonarqube
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://pg-sonar:5432/sonar
+    networks:
+      - sonarnet
+    depends_on:
+      - pg-sonar
+    volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/sonarqube_extensions
+      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+
+  pg-sonar:
+    image: postgres:9.6
+    container_name: pg-sonar
+    environment:
+      - POSTGRES_USER=sonarqube
+      - POSTGRES_PASSWORD=sonarqube
+      - POSTGRES_DB=sonar
+    volumes:
+      - postgresql-data:/var/lib/postgresql/data
+    networks:
+      - sonarnet
+
+networks:
+  sonarnet:
+    driver: bridge
+
+volumes:
+  postgresql-data:
+    driver: local
+  sonarqube_conf:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_bundled-plugins:
